welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: '=' expected but ';' found.
  for (i<- 0 to getMondeLargeur()-1){
^